--- a/Museek/Info.plist
+++ b/Museek/Info.plist
@@ -20,10 +20,12 @@
 	<string>1</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
-	<key>NSAppleMusicUsageDescription</key>
-	<string>Permission to store your musical video.</string>
 	<key>NSCameraUsageDescription</key>
-	<string>Permission to use your camera so you can film your songs!</string>
+	<string>so you can film your songs.</string>
+	<key>NSMicrophoneUsageDescription</key>
+	<string>so you can record your music along with the video.</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>so you can choose your musical video.</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIMainStoryboardFile</key>
